UI: Prefs vibration pattern editor, + fixing warnings